added branch crud

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,6 +61,7 @@
   --color-darkgreen: #014421;
   --color-darkyellow: #DEAD00;
   --color-darkbrown: #653818;
+  --color-darkorange-2: #E6521F;
 
 }
 
