--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,9 @@
 
 * {
   font-family: "Figtree", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-stretch: ultra-expanded;
 }
 
 @theme inline {
