--- a/src/app/style.css
+++ b/src/app/style.css
@@ -28,6 +28,11 @@ button, a {
     font-size: 14px;
     padding: 6px 0 6px 8px;
     margin-block: auto;
+    white-space: normal;        
+    overflow-wrap: break-word;
+    word-break: break-word;   
 }
+
+
 
 /* FIGTREE */
