--- a/src/app/style.css
+++ b/src/app/style.css
@@ -48,6 +48,11 @@ button, a {
     word-break: break-word;   
 }
 
+.center {
+    justify-content: center;
+    align-items: center;
+}
+
 
 
 /* FIGTREE */
